--- a/requirements.txt
+++ b/requirements.txt
@@ -105,6 +105,7 @@ ruamel-yaml-clib=0.2.12=pypi_0
 ruff=0.7.1=pypi_0
 s3transfer=0.10.3=pypi_0
 safehttpx=0.1.1=pypi_0
+safetensors=0.4.5=pypi_0
 scipy=1.14.1=pypi_0
 seaborn=0.13.2=pypi_0
 semantic-version=2.10.0=pypi_0
@@ -116,6 +117,7 @@ sqlite=3.45.3=h5eee18b_0
 starlette=0.41.2=pypi_0
 sympy=1.13.1=pypi_0
 tabulate=0.9.0=pypi_0
+timm=1.0.11=pypi_0
 tk=8.6.14=h39e8969_0
 tomlkit=0.12.0=pypi_0
 torch=2.5.0=pypi_0
